fix: layout on tablet

--- a/components/Welcome/Welcome.scss
+++ b/components/Welcome/Welcome.scss
@@ -38,13 +38,6 @@
 
   @media screen and (max-width: $breakpoint-md) {
     &__background {
-      width: 320px;
-      height: 320px;
-    }
-  }
-
-  @media screen and (max-width: $breakpoint-sm) {
-    &__background {
       display: none;
     }
   }
